--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,6 +166,13 @@ a {
 	width: 100%;
 }
 
+.join-main input[type='password'] {
+	font-size: 16px;
+	padding: 5px;
+	height: 40px;
+	width: 100%;
+}
+
 .join-main select {
 	font-size: 16px;
 	padding: 5px;
